--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,11 @@
-# Dockerfile for React
+# Dockerfile для фронтенда (React)
 FROM nginx:alpine
 
-# Copy build files
+# Копируем файлы сборки React
 COPY build/ /usr/share/nginx/html
 
-# Expose port 80
+# Экспортируем порт 80 для Nginx
 EXPOSE 80
+
+# Запуск Nginx
+CMD ["nginx", "-g", "daemon off;"]
